removing z-index from .fixedlogo a tag

--- a/blocbox/static/blocbox/css/jb_bootstrap_customization.css
+++ b/blocbox/static/blocbox/css/jb_bootstrap_customization.css
@@ -130,7 +130,7 @@ h6 {font-size: 1.286em; font-weight: 400; }
 
 .fixedlogo {
     display: block; position: fixed;
-    z-index: 100000;
+    /*z-index: 100000; */
     top: 5%; left: 2%;
 }
 
